# pl2303gpio

./: .gitignore  10-pl2303_cp210x_userspace.rules  10-pl2303userspace.rules  CMakeLists.txt  Makefile  README.md  cp2103.c  debian.changelog  debian.control  debian.rules  main.c  pl2303.c  pl2303gc.c  pl2303gpio.dsc  usb.c
etc/: serverd.conf
etc/init.d/: serverd
extra/: serverctl  serverd.lua
tests/: blink.sh  kitt.sh
